Update profile image source in index.html

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 <body>
     <header>
         <div class="profile-section">
-            <img src="portfolio.jpeg" alt="Dhanashree S" class="profile-img">
+            <img src="images/profile.png">
             <div class="profile-info">
                 <h1>Dhanashree S</h1>
                 <div class="contact-item">
