Fix class name for other works section

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ I am curious, adaptable, and motivated to learn, and I actively seek opportuniti
         </div>
 
         <h2 class="section-title">Other Works</h2>
-        <div class="other-works">
+        <div class="Other-works">
             <div class="other-work-card">
                 <h3>Product Tour - Zoho Sheet</h3>
                 <p>I wrote the <strong>product tour for Zoho Sheet</strong>, creating clear, step-by-step instructions to help users understand key features. This project improved my technical writing and content structuring skills. 
