--- a/index.html
+++ b/index.html
@@ -498,11 +498,9 @@
         <section class="about">
             <h2>About Me</h2>
             <p>
-I am interested in content writing and product documentation, with a strong focus on clarity, structure, and user understanding. 
-I enjoy translating ideas, features, and business concepts into well-organized content that is easy to read and useful for the audience.
+I am someone who enjoys learning new things, working on ideas, and improving over time. I have an interest in writing and expressing thoughts clearly, and I value staying curious and adaptable in different situations. 
 <br><br>
-Through research projects, product analyses, documentation work, and editorial roles, I have developed skills in structured writing, analytical thinking, collaboration and communication. 
-I am curious, adaptable, and motivated to learn, and I actively seek opportunities that help me grow through real-world projects and feedback.
+I believe in being dependable, open to growth, and doing my best in whatever I take up.
 </p>
 
         </section>
@@ -688,4 +686,4 @@ I am curious, adaptable, and motivated to learn, and I actively seek opportuniti
 
     <footer>
         <p>
-]
+
