--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@
         <section class="about">
             <h2>About Me</h2>
             <p>
-I am someone who enjoys learning new things, working on ideas, and improving over time. I have an interest in writing and expressing thoughts clearly, and I value staying curious and adaptable in different situations. 
-<br><br>
-I believe in being dependable, open to growth, and doing my best in whatever I take up.
+I am someone who enjoys learning new things, exploring ideas, and continuously improving over time.<br><br>
+I have a strong interest in writing and expressing thoughts clearly, and I value clear, respectful communication. I make an effort to communicate thoughtfully and listen well, while staying curious and adaptable in different situations.<br><br>
+Being dependable, open to growth, and committed to doing my best in whatever I take up are qualities I strive to maintain consistently.
 </p>
 
         </section>
