Refactor About Me section for better readability
Removed unnecessary line breaks in the About Me section.

--- a/index.html
+++ b/index.html
@@ -499,8 +499,7 @@
             <h2>About Me</h2>
             <p>
 I am someone who enjoys learning new things, exploring ideas, and continuously improving over time.
-<br><br>
-I have a strong interest in writing and expressing thoughts clearly, and I value clear, respectful communication. I make an effort to communicate thoughtfully and listen well, while staying curious and adaptable in different situations.<br><br>
+I have a strong interest in writing and expressing thoughts clearly, and I value clear, respectful communication. I make an effort to communicate thoughtfully and listen well, while staying curious and adaptable in different situations.
 Being dependable, open to growth, and committed to doing my best in whatever I take up are qualities I strive to maintain consistently.
 </p>
 
