--- a/index.html
+++ b/index.html
@@ -582,6 +582,13 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
                <p>I created a <strong>Business Model Canvas</strong> to structure and present a product idea clearly. The canvas outlines key elements such as the value proposition, target customers, channels, and revenue streams, helping translate an idea into a cohesive business view.
                <a href="https://workdrive.zoho.in/file/8o8bp7d99498027e048b798ebdfe339d25a46" target="_blank">View BMC here →</a></p>
             </div>
+              </div>
+<div class="other-work-card">
+   <h3>"Access Denied" - Novel November</h3>
+   <p>I wrote <strong>2 chapters for NaNoWriMo 2025</strong>: one collaboratively and one independently, showcasing creative writing and storytelling skills.  
+   <a href="https://workdrive.zohoexternal.in/folder/0nbaid238780ca2af4738bdfb1f208e5ca1b3" target="_blank">View chapters here →</a></p>
+</div>
+
         </div>
 
         <h2 class="section-title">Zoho Products Known</h2>
