Update chapter description for 'Access Denied' novel

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
               </div>
 <div class="other-work-card">
    <h3>"Access Denied" - Novel November</h3>
-   <p>I wrote <strong>2 chapters for NaNoWriMo 2025</strong>: one collaboratively and one independently, showcasing creative writing and storytelling skills.  
+   <p>I wrote <strong>2 chapters for Access Denied novel</strong>: one collaboratively and one independently, showcasing creative writing and storytelling skills.  
    <a href="https://workdrive.zohoexternal.in/folder/0nbaid238780ca2af4738bdfb1f208e5ca1b3" target="_blank">View chapters here →</a></p>
 </div>
 
