Update links and add business proposal section

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
                 <div class="work-content">
                     <h3>Product Pitch Deck</h3>
                     <p>I created a <strong>Product pitch deck</strong> to present an idea clearly and persuasively. The deck focuses on defining the problem, understanding user needs, and communicating the value of the solution.</p>
-                    <p><a href="https://show.zoho.in/show/open/4jc8wa1b313426ba04014bcc727b747dd1377" target="_blank">View the deck here →</a></p>
+                    <p><a href="https://workdrive.zoho.in/file/x3dyzcde028fa20234d56930dac7b28c9eb3f" target="_blank">View the deck here →</a></p>
                 </div>
             </div>
         </div>
@@ -588,6 +588,12 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
    <p>I wrote <strong>2 chapters for Access Denied novel</strong>: one collaboratively and one independently, showcasing creative writing and storytelling skills.  
    <a href="https://workdrive.zohoexternal.in/folder/0nbaid238780ca2af4738bdfb1f208e5ca1b3" target="_blank">View chapters here →</a></p>
 </div>
+        <div class="other-work-card">
+   <h3>Business Proposal</h3>
+   <p>I created a <strong>business proposal</strong> for a product idea, clearly presenting the problem, solution, target market, and growth potential. The proposal demonstrates how an idea can be structured into a practical and well-defined business plan.
+   <a href="https://show.zoho.in/show/open/4jc8wa1b313426ba04014bcc727b747dd1377" target="_blank">View business proposal →</a></p>
+</div>
+
 
         </div>
 
