Refactor HTML structure and improve formatting

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -468,45 +468,49 @@
             margin-bottom: 10px;
             color: #b0b0b0;
         }
-    </style>
+ </style>
 </head>
+
 <body>
-    <header>
-        <div class="profile-section">
-          <img src="portfolio.jpeg" class="profile-img" alt="Profile picture">
-            <div class="profile-info">
-                <h1>Dhanashree S</h1>
-                <div class="contact-item">
-                    <span aria-label="Calendar">📅</span>
-                    <span>Date of Birth: July 12, 2006</span>
-                </div>
-                <div class="contact-item">
-                    <span>📱</span>
-                    <a href="tel:+918383025826">+91 8383025826</a>
-                </div>
-                <div class="contact-item">
-                    <span aria-label="Email">📧</span>
 
-                    <a href="mailto:dhanashree.s@zohocorp.com">dhanashree.s@zohocorp.com</a>
-                    
-                </div>
-            </div>
-        </div>
-    </header>
+<header>
+  <div class="profile-section">
+    <img src="portfolio.jpeg" class="profile-img" alt="Profile picture">
+    <div class="profile-info">
+      <h1>Dhanashree S</h1>
 
-    <div class="container">
-        <section class="about">
-            <h2>About Me</h2>
-            <p>
+      <div class="contact-item">
+        <span>📅</span>
+        <span>Date of Birth: July 12, 2006</span>
+      </div>
+
+      <div class="contact-item">
+        <span>📱</span>
+        <a href="tel:+918383025826">+91 8383025826</a>
+      </div>
+
+      <div class="contact-item">
+        <span>📧</span>
+        <a href="mailto:dhanashree.s@zohocorp.com">dhanashree.s@zohocorp.com</a>
+      </div>
+    </div>
+  </div>
+</header>
+
+<div class="container">
+
+<section class="about">
+<h2>About Me</h2>
+<p>
 I am someone who enjoys learning new things, exploring ideas, and continuously improving over time.
-I have a strong interest in writing and expressing thoughts clearly, and I value clear, respectful communication. I make an effort to communicate thoughtfully and listen well, while staying curious and adaptable in different situations.
+I have a strong interest in writing and expressing thoughts clearly, and I value clear, respectful communication.
+I make an effort to communicate thoughtfully and listen well, while staying curious and adaptable in different situations.
 Being dependable, open to growth, and committed to doing my best in whatever I take up are qualities I strive to maintain consistently.
 </p>
+</section>
 
-        </section>
-
-        <h2 class="section-title">Top Works</h2>
-        <div class="top-works">
+<h2 class="section-title">Top Works</h2>
+<div class="top-works">
             <div class="work-card">
                 <div class="work-content">
                     <h3>Novel November - Coordinator & Point of Contact</h3>
