--- a/index.html
+++ b/index.html
@@ -592,11 +592,13 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
 
 
             </div>
+             <a href="https://workdrive.zoho.in/file/8o8bp7d99498027e048b798ebdfe339d25a46" target="_blank">
             <div class="other-work-card">
                <h3>Business Model Canvas (BMC)</h3>
                <p>I created a <strong>Business Model Canvas</strong> to structure and present a product idea clearly. The canvas outlines key elements such as the value proposition, target customers, channels, and revenue streams, helping translate an idea into a cohesive business view.
-               <a href="https://workdrive.zoho.in/file/8o8bp7d99498027e048b798ebdfe339d25a46" target="_blank">View BMC here →</a></p>
-            </div>
+             </p>
+            </div> 
+             </a>
               </div>
 <div class="other-work-card">
    <h3>"Access Denied" - Novel November</h3>
