--- a/index.html
+++ b/index.html
@@ -526,28 +526,28 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
                 <div class="work-content">
                     <h3>Novel November - Coordinator & Point of Contact</h3>
                     <p>I coordinated over 20 students, managing communication, schedules, and resources. I reviewed content, encouraged collaboration, and addressed challenges promptly. This experience strengthened my leadership, event management, and team coordination skills.</p>
-                    <p><a href="https://novelnovmber-60044720209.catalystserverless.in/app/index.html" target="_blank">View Novel November →</a></p>
+                    <p><a href="https://novelnovmber-60044720209.catalystserverless.in/app/index.html" target="_blank">View Novel November</a></p>
                 </div>
             </div>
             <div class="work-card">
                 <div class="work-content">
                     <h3>Tharuvai Bulletin - Writer</h3>
                     <p>I write for Tharuvai Bulletin, capturing meetings and events in engaging articles. I also cover celebrations and feature stories, strengthening my writing, storytelling, and content development skills.</p>
-                    <p><a href="https://workdrive.zohoexternal.in/folder/kdqtx2acbb6ac6f2845acad94480d5859b73b" target="_blank">Check out my work here →</a></p>
+                    <p><a href="https://workdrive.zohoexternal.in/folder/kdqtx2acbb6ac6f2845acad94480d5859b73b" target="_blank">Check out my work here</a></p>
                 </div>
             </div>
             <div class="work-card">
                 <div class="work-content">
                     <h3>Pinterest Market Research</h3>
                     <p>I conducted a <strong>TAM-SAM-SOM analysis on Pinterest</strong>, examining market segmentation, user adoption, and growth opportunities. This research enhanced my analytical and research skills while providing insights into market dynamics and strategic evaluation.</p>
-                    <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx5afc1680c05d4740993bdb2d17c72c1f" target="_blank">View the research here →</a></p>
+                    <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx5afc1680c05d4740993bdb2d17c72c1f" target="_blank">View the research here</a></p>
                 </div>
             </div>
             <div class="work-card">
                 <div class="work-content">
                     <h3>Golden Circle Analysis - Snapchat</h3>
                     <p>I conducted a <strong>Golden Circle analysis on Snapchat</strong>, exploring its purpose, approach, and offerings. This helped me understand value propositions, user engagement, and strategic positioning while enhancing my business analysis skills.</p>
-                    <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx26108a17c9704f27a06905c0b938bc59" target="_blank">View the analysis here →</a></p>
+                    <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx26108a17c9704f27a06905c0b938bc59" target="_blank">View the analysis here</a></p>
                 </div>
             </div>
             <div class="work-card">
@@ -561,7 +561,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
                 <div class="work-content">
                     <h3>Product Pitch Deck</h3>
                     <p>I created a <strong>Product pitch deck</strong> to present an idea clearly and persuasively. The deck focuses on defining the problem, understanding user needs, and communicating the value of the solution.</p>
-                    <p><a href="https://workdrive.zoho.in/file/x3dyzcde028fa20234d56930dac7b28c9eb3f" target="_blank">View the deck here →</a></p>
+                    <p><a href="https://workdrive.zoho.in/file/x3dyzcde028fa20234d56930dac7b28c9eb3f" target="_blank">View the deck here</a></p>
                 </div>
             </div>
         </div>
@@ -571,32 +571,32 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
             <div class="other-work-card">
                 <h3>Product Tour - Zoho Sheet</h3>
                 <p>I wrote the <strong>product tour for Zoho Sheet</strong>, creating clear, step-by-step instructions to help users understand key features. This project improved my technical writing and content structuring skills. 
-                <a href="https://workdrive.zoho.in/file/095h5e33f325253e64e3a9fc5603c85aceb41" target="_blank">View product tour here →</a></p>
+                <a href="https://workdrive.zoho.in/file/095h5e33f325253e64e3a9fc5603c85aceb41" target="_blank">View product tour here</a></p>
             </div>
             <div class="other-work-card">
                 <h3>Personal Blog - Writer</h3>
                 <p>I maintain a personal blog, <strong>Pages Remembered</strong>, where I write about ideas, reflections, and experiences. This work strengthens my creative writing and storytelling skills. 
-                <a href="https://www.blogger.com/blog/posts/6095930630957025891" target="_blank">Visit my blog here →</a></p>
+                <a href="https://www.blogger.com/blog/posts/6095930630957025891" target="_blank">Visit my blog here</a></p>
             </div>
             <div class="other-work-card">
                 <h3>Tharuvai Bulletin - Rule Book</h3>
                 <p>I created a <strong>rule book for Tharuvai Bulletin</strong>, establishing editorial guidelines for clarity and quality. This work improved my documentation and organizational skills. 
-                <a href="https://workdrive.zohopublic.in/writer/open/anv1vec66d1a8b20b4d249e1e5e2d6375c0be" target="_blank">View rule book here →</a></p>
+                <a href="https://workdrive.zohopublic.in/writer/open/anv1vec66d1a8b20b4d249e1e5e2d6375c0be" target="_blank">View rule book here</a></p>
             </div>
            <div class="other-work-card">
                 <h3>Deprecation of SMS-Based Multi-Factor Authentication (MFA)</h3>
               <p>
   I wrote content on the <strong>deprecation of SMS-based MFA</strong>, explaining risks, alternatives, and best practices to guide users. This strengthened my technical writing and cybersecurity awareness skills.
-  <a href="https://writer.zoho.in/writer/open/go70v0eaf9de38704435eb38acf1467f04876" target="_blank">View MFA article →</a>
+  <a href="https://writer.zoho.in/writer/open/go70v0eaf9de38704435eb38acf1467f04876" target="_blank">View MFA article</a>
 </p>
 </div>
-             <a href="https://workdrive.zoho.in/file/8o8bp7d99498027e048b798ebdfe339d25a46" target="_blank">
+           
             <div class="other-work-card">
                <h3>Business Model Canvas (BMC)</h3>
                <p>I created a <strong>Business Model Canvas</strong> to structure and present a product idea clearly. The canvas outlines key elements such as the value proposition, target customers, channels, and revenue streams, helping translate an idea into a cohesive business view.
-             </p>
+                 <a href="https://workdrive.zoho.in/file/8o8bp7d99498027e048b798ebdfe339d25a46" target="_blank">View BMC here   </a></p>
             </div> 
-             </a>
+          
               </div>
 <div class="other-work-card">
    <h3>"Access Denied" - Novel November</h3>
