Update work cards and remove skill item

--- a/index.html
+++ b/index.html
@@ -522,49 +522,62 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
 
 <h2 class="section-title">Top Works</h2>
 <div class="top-works">
-            <div class="work-card">
-                <div class="work-content">
-                    <h3>Novel November - Coordinator & Point of Contact</h3>
-                    <p>I coordinated over 20 students, managing communication, schedules, and resources. I reviewed content, encouraged collaboration, and addressed challenges promptly. This experience strengthened my leadership, event management, and team coordination skills.</p>
-                    <p><a href="https://novelnovmber-60044720209.catalystserverless.in/app/index.html" target="_blank">View Novel November</a></p>
-                </div>
-            </div>
-            <div class="work-card">
-                <div class="work-content">
-                    <h3>Tharuvai Bulletin - Writer</h3>
-                    <p>I write for Tharuvai Bulletin, capturing meetings and events in engaging articles. I also cover celebrations and feature stories, strengthening my writing, storytelling, and content development skills.</p>
-                    <p><a href="https://workdrive.zohoexternal.in/folder/kdqtx2acbb6ac6f2845acad94480d5859b73b" target="_blank">Check out my work here</a></p>
-                </div>
-            </div>
-            <div class="work-card">
-                <div class="work-content">
-                    <h3>Pinterest Market Research</h3>
-                    <p>I conducted a <strong>TAM-SAM-SOM analysis on Pinterest</strong>, examining market segmentation, user adoption, and growth opportunities. This research enhanced my analytical and research skills while providing insights into market dynamics and strategic evaluation.</p>
-                    <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx5afc1680c05d4740993bdb2d17c72c1f" target="_blank">View the research here</a></p>
-                </div>
-            </div>
-            <div class="work-card">
-                <div class="work-content">
-                    <h3>Golden Circle Analysis - Snapchat</h3>
-                    <p>I conducted a <strong>Golden Circle analysis on Snapchat</strong>, exploring its purpose, approach, and offerings. This helped me understand value propositions, user engagement, and strategic positioning while enhancing my business analysis skills.</p>
-                    <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx26108a17c9704f27a06905c0b938bc59" target="_blank">View the analysis here</a></p>
-                </div>
-            </div>
-            <div class="work-card">
-                <div class="work-content">
-                    <h3>Tharuvai Bulletin (Vol. 4) - Designer</h3>
-                    <p>I designed <strong>Tharuvai Bulletin, Volume 4</strong>, creating the layout and visual style. Collaborating with writers and editors, I ensured content and visuals complemented each other, producing a polished and reader-friendly publication.</p>
-                    <p><a href="https://workdrive.zohoexternal.in/file/kdqtx9f0c5f7e99ad4f7d8d662ad33a6814ed" target="_blank">View the publication here →</a></p>
-                </div>
-            </div>
-            <div class="work-card">
-                <div class="work-content">
-                    <h3>Product Pitch Deck</h3>
-                    <p>I created a <strong>Product pitch deck</strong> to present an idea clearly and persuasively. The deck focuses on defining the problem, understanding user needs, and communicating the value of the solution.</p>
-                    <p><a href="https://workdrive.zoho.in/file/x3dyzcde028fa20234d56930dac7b28c9eb3f" target="_blank">View the deck here</a></p>
-                </div>
-            </div>
+    <div class="work-card">
+        <div class="work-content">
+            <h3>Novel November – Coordinator & POC</h3>
+            <img src="https://placehold.co/300x200?text=Novel+November" alt="Novel November" style="width:100%; height:auto; margin-bottom:10px;">
+            <p>Led 20+ students, handling communication, timelines, and collaboration to ensure smooth execution.</p>
+            <p><a href="https://novelnovmber-60044720209.catalystserverless.in/app/index.html" target="_blank">View Novel November</a></p>
         </div>
+    </div>
+
+    <div class="work-card">
+        <div class="work-content">
+            <h3>Tharuvai Bulletin – Writer</h3>
+            <img src="https://placehold.co/300x200?text=Tharuvai+Bulletin" alt="Tharuvai Bulletin" style="width:100%; height:auto; margin-bottom:10px;">
+            <p>Write articles on events and features, focusing on engaging storytelling and content quality.</p>
+            <p><a href="https://workdrive.zohoexternal.in/folder/kdqtx2acbb6ac6f2845acad94480d5859b73b" target="_blank">Check out my work here</a></p>
+        </div>
+    </div>
+
+    <div class="work-card">
+        <div class="work-content">
+            <h3>Pinterest Market Research</h3>
+            <img src="https://placehold.co/300x200?text=Pinterest+Research" alt="Pinterest Market Research" style="width:100%; height:auto; margin-bottom:10px;">
+            <p>Conducted TAM-SAM-SOM analysis to identify market segments and growth insights.</p>
+            <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx5afc1680c05d4740993bdb2d17c72c1f" target="_blank">View the research here</a></p>
+        </div>
+    </div>
+
+    <div class="work-card">
+        <div class="work-content">
+            <h3>Golden Circle Analysis – Snapchat</h3>
+            <img src="https://placehold.co/300x200?text=Snapchat+Analysis" alt="Golden Circle Analysis" style="width:100%; height:auto; margin-bottom:10px;">
+            <p>Explored Snapchat’s core purpose and strategy, enhancing understanding of its value proposition.</p>
+            <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx26108a17c9704f27a06905c0b938bc59" target="_blank">View the analysis here</a></p>
+        </div>
+    </div>
+
+    <div class="work-card">
+        <div class="work-content">
+            <h3>Tharuvai Bulletin (Vol. 4) – Designer</h3>
+            <img src="https://placehold.co/300x200?text=Tharuvai+Vol.+4" alt="Tharuvai Bulletin Volume 4" style="width:100%; height:auto; margin-bottom:10px;">
+            <p>Designed Volume 4’s layout and visual style for a cohesive, reader-friendly look.</p>
+            <p><a href="https://workdrive.zohoexternal.in/file/kdqtx9f0c5f7e99ad4f7d8d662ad33a6814ed" target="_blank">View the publication here →</a></p>
+        </div>
+    </div>
+
+    <div class="work-card">
+        <div class="work-content">
+            <h3>Product Pitch Deck</h3>
+            <img src="https://placehold.co/300x200?text=Pitch+Deck" alt="Product Pitch Deck" style="width:100%; height:auto; margin-bottom:10px;">
+            <p>Created a clear pitch deck outlining problem, user needs, and solution value.</p>
+            <p><a href="https://workdrive.zoho.in/file/x3dyzcde028fa20234d56930dac7b28c9eb3f" target="_blank">View the deck here</a></p>
+        </div>
+    </div>
+</div>
+
+
 
         <h2 class="section-title">Other Works</h2>
         <div class="Other-works">
@@ -696,12 +709,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
                         <div class="skill-progress" style="width: 80%"></div>
                     </div>
                 </div>
-                <div class="skill-item">
-                    <h4>Event Coordination</h4>
-                    <div class="skill-bar">
-                        <div class="skill-progress" style="width: 88%"></div>
-                    </div>
-                </div>
+            
                 <div class="skill-item">
                     <h4>Communication</h4>
                     <div class="skill-bar">
