--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
     <div class="work-card">
         <div class="work-content">
             <h3>Novel November – Coordinator & POC</h3>
-            <img src="https://placehold.co/300x200?text=Novel+November" alt="Novel November" style="width:100%; height:auto; margin-bottom:10px;">
+            <img src="https://thenounproject.com/icon/project-management-12345/svg" alt="Project Coordination Icon" style="width:100px; height:auto; margin-bottom:10px;">
             <p>Led 20+ students, handling communication, timelines, and collaboration to ensure smooth execution.</p>
             <p><a href="https://novelnovmber-60044720209.catalystserverless.in/app/index.html" target="_blank">View Novel November</a></p>
         </div>
@@ -534,7 +534,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
     <div class="work-card">
         <div class="work-content">
             <h3>Tharuvai Bulletin – Writer</h3>
-            <img src="https://placehold.co/300x200?text=Tharuvai+Bulletin" alt="Tharuvai Bulletin" style="width:100%; height:auto; margin-bottom:10px;">
+            <img src="https://thenounproject.com/icon/writing-12345/svg" alt="Writing Icon" style="width:100px; height:auto; margin-bottom:10px;">
             <p>Write articles on events and features, focusing on engaging storytelling and content quality.</p>
             <p><a href="https://workdrive.zohoexternal.in/folder/kdqtx2acbb6ac6f2845acad94480d5859b73b" target="_blank">Check out my work here</a></p>
         </div>
@@ -543,8 +543,8 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
     <div class="work-card">
         <div class="work-content">
             <h3>Pinterest Market Research</h3>
-            <img src="https://placehold.co/300x200?text=Pinterest+Research" alt="Pinterest Market Research" style="width:100%; height:auto; margin-bottom:10px;">
-            <p>Conducted TAM-SAM-SOM analysis to identify market segments and growth insights.</p>
+            <img src="https://thenounproject.com/icon/market-research-12345/svg" alt="Market Research Icon" style="width:100px; height:auto; margin-bottom:10px;">
+            <p>Conducted TAM‑SAM‑SOM analysis to identify market segments and growth insights.</p>
             <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx5afc1680c05d4740993bdb2d17c72c1f" target="_blank">View the research here</a></p>
         </div>
     </div>
@@ -552,7 +552,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
     <div class="work-card">
         <div class="work-content">
             <h3>Golden Circle Analysis – Snapchat</h3>
-            <img src="https://placehold.co/300x200?text=Snapchat+Analysis" alt="Golden Circle Analysis" style="width:100%; height:auto; margin-bottom:10px;">
+            <img src="https://thenounproject.com/icon/analysis-12345/svg" alt="Analysis Icon" style="width:100px; height:auto; margin-bottom:10px;">
             <p>Explored Snapchat’s core purpose and strategy, enhancing understanding of its value proposition.</p>
             <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx26108a17c9704f27a06905c0b938bc59" target="_blank">View the analysis here</a></p>
         </div>
@@ -561,8 +561,8 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
     <div class="work-card">
         <div class="work-content">
             <h3>Tharuvai Bulletin (Vol. 4) – Designer</h3>
-            <img src="https://placehold.co/300x200?text=Tharuvai+Vol.+4" alt="Tharuvai Bulletin Volume 4" style="width:100%; height:auto; margin-bottom:10px;">
-            <p>Designed Volume 4’s layout and visual style for a cohesive, reader-friendly look.</p>
+            <img src="https://thenounproject.com/icon/design-12345/svg" alt="Design Icon" style="width:100px; height:auto; margin-bottom:10px;">
+            <p>Designed Volume 4’s layout and visual style for a cohesive, reader‑friendly look.</p>
             <p><a href="https://workdrive.zohoexternal.in/file/kdqtx9f0c5f7e99ad4f7d8d662ad33a6814ed" target="_blank">View the publication here →</a></p>
         </div>
     </div>
@@ -570,7 +570,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
     <div class="work-card">
         <div class="work-content">
             <h3>Product Pitch Deck</h3>
-            <img src="https://placehold.co/300x200?text=Pitch+Deck" alt="Product Pitch Deck" style="width:100%; height:auto; margin-bottom:10px;">
+            <img src="https://thenounproject.com/icon/pitch-deck-12345/svg" alt="Pitch Deck Icon" style="width:100px; height:auto; margin-bottom:10px;">
             <p>Created a clear pitch deck outlining problem, user needs, and solution value.</p>
             <p><a href="https://workdrive.zoho.in/file/x3dyzcde028fa20234d56930dac7b28c9eb3f" target="_blank">View the deck here</a></p>
         </div>
